Fix tile alignment in navigation

--- a/src/app/components/navigate-result/navigate-result.component.scss
+++ b/src/app/components/navigate-result/navigate-result.component.scss
@@ -2,7 +2,7 @@
     --cell: repeat(auto-fill, minmax(200px, 1fr));
     display: grid;
     grid-template-columns: var(--cell);
-    grid-auto-rows: auto auto auto auto auto auto 1em auto 5px;
+    grid-auto-rows: auto auto auto auto auto auto auto auto 5px;
     gap: 0 10px;
     margin-top: 20px;
 }
@@ -46,7 +46,6 @@ figcaption {
     display: grid;
     grid-row-start: span 6;
     grid-template: subgrid/subgrid;
-    margin-bottom: 5px;
 
     .groups {
         display: flex;
